--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
       Your browser does not support the video tag.
     </video>
     <div class="position-absolute container d-flex flex-column align-items-center justify-content-center">
-      <h1 class="text-white text-center" style="margin-bottom: 14px;">Bring Happiness</h1>
+      <h1 class="text-white text-center" style="margin-bottom: 14px; max-width: 1500px;">Bring Happiness</h1>
       <h6 class="text-white text-center" style="margin-bottom: 41px;">Kami merupakan salah satu produsen es krim ternama
         di Indonesia, dengan rangkaian produk yang selalu menjadi juara di hati konsumen.</h6>
       <a href="" class="btn btn-primary-light btn-lg">
