--- a/rups.html
+++ b/rups.html
@@ -303,6 +303,7 @@
             <a class="nav-link py-3 text-black border-bottom" href="presentasi-perusahaan.html">Presentasi Perusahaan</a>
             <a class="nav-link py-3 text-black border-bottom" href="#">Informasi Keuangan</a>
             <a class="nav-link py-3 text-black border-bottom" href="#">Lembaga & Profesi Penunjang Pasar Modal</a>
+            <a class="nav-link py-3 text-black border-bottom" href="#">Informasi Saham Campina</a>
             <a class="nav-link py-3 text-black border-bottom" href="#">Kronologis Pencatatan Saham</a>
           </nav>
         </div>
@@ -320,6 +321,7 @@
             <a class="nav-link py-3 text-black border-bottom" href="presentasi-perusahaan.html">Presentasi Perusahaan</a>
             <a class="nav-link py-3 text-black border-bottom" href="#">Informasi Keuangan</a>
             <a class="nav-link py-3 text-black border-bottom" href="#">Lembaga & Profesi Penunjang Pasar Modal</a>
+            <a class="nav-link py-3 text-black border-bottom" href="#">Informasi Saham Campina</a>
             <a class="nav-link py-3 text-black border-bottom" href="#">Kronologis Pencatatan Saham</a>
           </nav>
         </div>
