add hover effect fun creator slider & fix mobile decoration position

--- a/index.html
+++ b/index.html
@@ -542,33 +542,33 @@
           <div class="swiper-wrapper">
             <!-- Slides -->
             <div class="swiper-slide px-2">
-              <div class="product-content position-relative black-overlay">
-                <a href="#">
+              <div class="product-content d-flex align-items-end" style="background-image: url(assets/images/campina/creator-waffle-vanilla.png);">
+                <!-- <a href="#">
                   <img src="assets/images/campina/creator-waffle-vanilla.png" alt="creator">
-                </a>
-                <div class="d-flex justify-content-between align-items-center position-absolute px-5 bottom-0 mb-5" style="width: 100%;">
+                </a> -->
+                <div class="d-flex justify-content-between align-items-center px-5 mb-5 w-100">
                   <h4 class="title"><a href="#" class="text-white fs-4 small">Membuat Menu<br/>Banana Split</a></h4>
                   <a href="" class="btn btn-white btn-sm">View Details</a>
                 </div>
               </div>
             </div>
             <div class="swiper-slide px-2">
-              <div class="product-content position-relative black-overlay">
-                <a href="#">
+              <div class="product-content d-flex align-items-end" style="background-image: url(assets/images/campina/creator-banana-split.png);">
+                <!-- <a href="#">
                   <img src="assets/images/campina/creator-banana-split.png" alt="creator">
-                </a>
-                <div class="d-flex justify-content-between align-items-center position-absolute px-5 bottom-0 mb-5" style="width: 100%;">
+                </a> -->
+                <div class="d-flex justify-content-between align-items-center px-5 mb-5 w-100">
                   <h4 class="title"><a href="#" class="text-white fs-4 small">Membuat Menu<br/>Banana Split</a></h4>
                   <a href="" class="btn btn-white btn-sm">View Details</a>
                 </div>
               </div>
             </div>
             <div class="swiper-slide px-2">
-              <div class="product-content position-relative black-overlay">
-                <a href="#">
+              <div class="product-content d-flex align-items-end" style="background-image: url(assets/images/campina/creator-es-krim-roti.png);">
+                <!-- <a href="#">
                   <img src="assets/images/campina/creator-es-krim-roti.png" alt="creator">
-                </a>
-                <div class="d-flex justify-content-between align-items-center position-absolute px-5 bottom-0 mb-5" style="width: 100%;">
+                </a> -->
+                <div class="d-flex justify-content-between align-items-center px-5 mb-5 w-100">
                   <h4 class="title"><a href="#" class="text-white fs-4 small">Membuat Menu<br/>Banana Split</a></h4>
                   <a href="" class="btn btn-white btn-sm">View Details</a>
                 </div>
