fix swiper hover effect page corporate, add reveal animation mitra campina, add swiper to product page menu & add faq menu function

--- a/corporate.html
+++ b/corporate.html
@@ -545,33 +545,24 @@
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide px-2">
-                <div class="product-content position-relative black-overlay">
-                  <a href="#">
-                    <img src="assets/images/campina/corporate-slider.png" alt="creator">
-                  </a>
-                  <div class="d-flex justify-content-between align-items-center position-absolute px-5 bottom-0 mb-2 mb-lg-5" style="width: 100%;">
+                <div class="product-content d-flex align-items-end" style="background-image: url(assets/images/campina/corporate-slider.png);">
+                  <div class="d-flex justify-content-between align-items-center px-5 mb-2 mb-lg-5 w-100">
                     <h4 class="title"><a href="#" class="text-white fs-4 small">Neque porro quisquam <br/>est qui dolorem ipsum</a></h4>
                     <a href="" class="btn btn-white btn-sm">View Details</a>
                   </div>
                 </div>
               </div>
               <div class="swiper-slide px-2">
-                <div class="product-content position-relative black-overlay">
-                  <a href="#">
-                    <img src="assets/images/campina/corporate-slider.png" alt="creator">
-                  </a>
-                  <div class="d-flex justify-content-between align-items-center position-absolute px-5 bottom-0 mb-2 mb-lg-5" style="width: 100%;">
+                <div class="product-content d-flex align-items-end" style="background-image: url(assets/images/campina/corporate-slider.png);">
+                  <div class="d-flex justify-content-between align-items-center px-5 mb-2 mb-lg-5 w-100">
                     <h4 class="title"><a href="#" class="text-white fs-4 small">Neque porro quisquam <br/>est qui dolorem ipsum</a></h4>
                     <a href="" class="btn btn-white btn-sm">View Details</a>
                   </div>
                 </div>
               </div>
               <div class="swiper-slide px-2">
-                <div class="product-content position-relative black-overlay">
-                  <a href="#">
-                    <img src="assets/images/campina/corporate-slider.png" alt="creator">
-                  </a>
-                  <div class="d-flex justify-content-between align-items-center position-absolute px-5 bottom-0 mb-2 mb-lg-5" style="width: 100%;">
+                <div class="product-content d-flex align-items-end" style="background-image: url(assets/images/campina/corporate-slider.png);">
+                  <div class="d-flex justify-content-between align-items-center px-5 mb-2 mb-lg-5 w-100">
                     <h4 class="title"><a href="#" class="text-white fs-4 small">Neque porro quisquam <br/>est qui dolorem ipsum</a></h4>
                     <a href="" class="btn btn-white btn-sm">View Details</a>
                   </div>
