--- a/faq.html
+++ b/faq.html
@@ -292,14 +292,14 @@
       <h2 class="page-content-title text-primary p-0 mb-5" style="font-size: 34px; font-weight: 700;">Pertanyaan Umum</h2>
       <div class="row mb-5 pb-5">
         <div class="col-lg-4 position-relative mb-5 mb-lg-0">
-          <div class="d-flex flex-row flex-lg-column align-items-start gap-4 overflow-auto p-2">
-            <button class="btn btn-primary" style="min-width: fit-content;">Layanan Pesan Antar</button>
-            <button class="btn text-black" style="min-width: fit-content;">Mitra Bisnis</button>
-            <button class="btn text-black" style="min-width: fit-content;">Seluk Beluk Es Krim Campina</button>
+          <div class="faq-menu d-flex flex-row flex-lg-column align-items-start gap-4 overflow-auto p-2">
+            <a href="#" class="btn btn-primary" data-type="layanan-pesan-antar" style="min-width: fit-content;">Layanan Pesan Antar</a>
+            <a href="#" class="btn text-black" data-type="mitra-bisnis" style="min-width: fit-content;">Mitra Bisnis</a>
+            <a href="#" class="btn text-black" data-type="seluk-beluk-campina" style="min-width: fit-content;">Seluk Beluk Es Krim Campina</a>
           </div>
         </div>
         <div class="col-lg-8">
-          <div class="accordion accordion-flush" id="faq">
+          <div class="faq-content layanan-pesan-antar accordion faq accordion-flush" id="faq">
             <div class="accordion-item">
               <h2 class="accordion-header" style="line-height: unset;">
                 <button class="accordion-button no-icon border-0 text-black collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-1" aria-expanded="false" aria-controls="faq-1" style="font-weight: 500;">
@@ -381,6 +381,94 @@
               <div id="faq-7" class="accordion-collapse border-0 collapse" data-bs-parent="#faq">
                 <div class="accordion-body">
                   <p class="text-black" style="font-weight: 500; font-size: 14px;">Bisa. Anda bisa mendapatkan pesanan anda diantarkan di hari yang sama via layanan GO-SEND by GO-JEK Indonesia, dengan memilih opsi pengiriman di halaman konfirmasi pesanan di website e-commerce www.icecreamstore.co.id.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="faq-content mitra-bisnis accordion faq accordion-flush d-none" id="faq-2">
+            <div class="accordion-item">
+              <h2 class="accordion-header" style="line-height: unset;">
+                <button class="accordion-button no-icon border-0 text-black collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-2-1" aria-expanded="false" aria-controls="faq-2-1" style="font-weight: 500;">
+                  Apakah Campina bisa dikirim ke rumah?
+                </button>
+              </h2>
+              <div id="faq-2-1" class="accordion-collapse border-0 collapse" data-bs-parent="#faq-2">
+                <div class="accordion-body">
+                  <p class="text-black" style="font-weight: 500; font-size: 14px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quod aspernatur libero similique praesentium at.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" style="line-height: unset;">
+                <button class="accordion-button no-icon border-0 text-black collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-2-2" aria-expanded="false" aria-controls="faq-2-2" style="font-weight: 500;">
+                  Apakah Campina Delivery bisa melayani pesanan khusus untuk pesta?
+                </button>
+              </h2>
+              <div id="faq-2-2" class="accordion-collapse border-0 collapse" data-bs-parent="#faq-2">
+                <div class="accordion-body">
+                  <p class="text-black" style="font-weight: 500; font-size: 14px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quod aspernatur libero similique praesentium at.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" style="line-height: unset;">
+                <button class="accordion-button no-icon border-0 text-black collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-2-3" aria-expanded="false" aria-controls="faq-2-3" style="font-weight: 500;">
+                  Campina Delivery bisa menjangkau area mana saja? Apakah hanya area Jabodetabek saja?
+                </button>
+              </h2>
+              <div id="faq-2-3" class="accordion-collapse border-0 collapse" data-bs-parent="#faq-2">
+                <div class="accordion-body">
+                  <p class="text-black" style="font-weight: 500; font-size: 14px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quod aspernatur libero similique praesentium at.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="faq-content seluk-beluk-campina faq accordion accordion-flush d-none" id="faq-3">
+            <div class="accordion-item">
+              <h2 class="accordion-header" style="line-height: unset;">
+                <button class="accordion-button no-icon border-0 text-black collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-3-1" aria-expanded="false" aria-controls="faq-3-1" style="font-weight: 500;">
+                  Apakah Campina bisa dikirim ke rumah?
+                </button>
+              </h2>
+              <div id="faq-3-1" class="accordion-collapse border-0 collapse" data-bs-parent="#faq-3">
+                <div class="accordion-body">
+                  <p class="text-black" style="font-weight: 500; font-size: 14px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quod aspernatur libero similique praesentium at.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" style="line-height: unset;">
+                <button class="accordion-button no-icon border-0 text-black collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-3-2" aria-expanded="false" aria-controls="faq-3-2" style="font-weight: 500;">
+                  Apakah Campina Delivery bisa melayani pesanan khusus untuk pesta?
+                </button>
+              </h2>
+              <div id="faq-3-2" class="accordion-collapse border-0 collapse" data-bs-parent="#faq-3">
+                <div class="accordion-body">
+                  <p class="text-black" style="font-weight: 500; font-size: 14px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quod aspernatur libero similique praesentium at.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" style="line-height: unset;">
+                <button class="accordion-button no-icon border-0 text-black collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-3-3" aria-expanded="false" aria-controls="faq-3-3" style="font-weight: 500;">
+                  Campina Delivery bisa menjangkau area mana saja? Apakah hanya area Jabodetabek saja?
+                </button>
+              </h2>
+              <div id="faq-3-3" class="accordion-collapse border-0 collapse" data-bs-parent="#faq-3">
+                <div class="accordion-body">
+                  <p class="text-black" style="font-weight: 500; font-size: 14px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quod aspernatur libero similique praesentium at.</p>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" style="line-height: unset;">
+                <button class="accordion-button no-icon border-0 text-black collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-3-4" aria-expanded="false" aria-controls="faq-3-4" style="font-weight: 500;">
+                  Pembayaran bisa melalui apa saja?
+                </button>
+              </h2>
+              <div id="faq-3-4" class="accordion-collapse border-0 collapse" data-bs-parent="#faq-3">
+                <div class="accordion-body">
+                  <p class="text-black" style="font-weight: 500; font-size: 14px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, quod aspernatur libero similique praesentium at.</p>
                 </div>
               </div>
             </div>
@@ -532,6 +620,28 @@
 
   <!-- custom -->
   <script src="assets/js/custom.js"></script>
+
+  <script>
+    const menus0 = document.querySelectorAll('.faq-menu a')
+    const faqs0 = document.querySelectorAll('.faq-content')
+
+    menus0.forEach(menu => {
+      menu.addEventListener('click', e => {
+        e.preventDefault()
+        const dataType = e.target.dataset.type
+
+        menus0.forEach(m => {
+          m.classList.remove('btn-primary')
+          m.classList.add('text-black')
+        })
+        e.target.classList.add('btn-primary')
+
+        faqs0.forEach(faq => {
+          faq.classList.contains(dataType) ? faq.classList.remove('d-none') : faq.classList.add('d-none')
+        })
+      })
+    })
+  </script>
 
 </body>
 
