--- a/index.html
+++ b/index.html
@@ -841,6 +841,7 @@
         slidesPerView: 1,
         centeredSlides: true,
         loop: true,
+        autoplay: true,
         breakpoints: {
           640: {
             slidesPerView: 2,
