--- a/life-at-campina-2.html
+++ b/life-at-campina-2.html
@@ -280,7 +280,7 @@
   <div class="menu-overlay"></div>
 
   <!-- page title section -->
-  <div class="page-title position-relative d-flex justify-content-center align-items-center white-overlay">
+  <div class="page-title position-relative d-flex justify-content-center align-items-center gradient-overlayy">
     <img src="assets/images/campina/bg-life-at-campina.png" alt="background life at campina">
     <div class="page-title-wrapper position-absolute container d-flex flex-column align-items-center justify-content-center">
       <h1 class="text-white text-center">Life at Campina</h1>
