--- a/fun-creator.html
+++ b/fun-creator.html
@@ -280,7 +280,7 @@
   <div class="menu-overlay"></div>
 
   <!-- page title section -->
-  <div class="page-title position-relative d-flex justify-content-center align-items-center yellow-overlay">
+  <div class="page-title position-relative d-flex justify-content-center align-items-center gradient-overlay">
     <img src="assets/images/campina/bg-fun-creator.png" alt="background fun creator">
     <div class="page-title-wrapper position-absolute container d-flex flex-column align-items-center justify-content-center">
       <h1 class="text-white text-center">Fun Creator</h1>
