fix swiper & header

--- a/index.html
+++ b/index.html
@@ -75,82 +75,78 @@
     <!-- Header Start  -->
     <div class="container">
       <div class="header header-sticky bg-white d-none d-lg-block">
-        <div class="row align-items-center">
-          <div class="col-lg-5">
-            <div class="header-menu header-menu-left">
-              <ul class="nav-menu">
-                <li>
-                  <a href="#">PRODUCT</a>
-                  <ul class="sub-menu">
-                    <li><a href="#">Store</a></li>
-                    <li><a href="product.html">Product Campina</a></li>
-                  </ul>
-                </li>
-                <li class="menu-item-has-children">
-                  <a href="#">FUN CREATOR</a>
-                  <ul class="sub-menu">
-                    <li><a href="fun-creator.html">Kreasi Es Krim Campina</a></li>
-                    <li><a href="#">Artikel/Blog</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
+        <div class="d-flex align-items-center justify-content-center">
+          <div class="header-menu header-menu-left">
+            <ul class="nav-menu">
+              <li>
+                <a href="#">PRODUCT</a>
+                <ul class="sub-menu">
+                  <li><a href="#">Store</a></li>
+                  <li><a href="product.html">Product Campina</a></li>
+                </ul>
+              </li>
+              <li class="menu-item-has-children">
+                <a href="#">FUN CREATOR</a>
+                <ul class="sub-menu">
+                  <li><a href="fun-creator.html">Kreasi Es Krim Campina</a></li>
+                  <li><a href="#">Artikel/Blog</a></li>
+                </ul>
+              </li>
+            </ul>
           </div>
-          <div class="col-lg-2 position-relative d-flex justify-content-center">
+          <div class="position-relative d-flex justify-content-center" style="width: 200px;">
             <!-- Header Logo Start -->
             <div class="header-logo">
               <a href="index.html"><img src="assets/images/campina/logo-campina.png" alt="Logo" height="126"></a>
             </div>
             <!-- Header Logo End -->
           </div>
-          <div class="col-lg-5">
-            <div class="header-menu header-menu-right">
-              <ul class="nav-menu">
-                <li>
-                  <a href="#">LIFE AT CAMPINA</a>
-                  <ul class="sub-menu">
-                    <li><a href="life-at-campina.html">Working at Campina</a></li>
-                    <li><a href="#">Campina Job Apply</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="#">KONTAK</a>
-                  <ul class="sub-menu">
-                    <li><a href="#">Kantor Pusat</a></li>
-                    <li><a href="#">Kantor Pemasaran, Penjualan & Distribusi</a></li>
-                    <li><a href="#">Hubungan Investor</a></li>
-                    <li><a href="#">Cabang Penjualan</a></li>
-                    <li><a href="#">Join Reseller</a></li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Layanan Konsumen</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Hotline</a></li>
-                        <li><a href="#">Pertanyaan dan Saran</a></li>
-                        <li><a href="#">Syarat & Ketentuan</a></li>
-                        <li><a href="#">Pernyataan Privasi</a></li>
-                        <li><a href="#">Komplain</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <div class="dropdown">
-                    <a class="action" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true"> <i class="pe-7s-search"></i> </a>
+          <div class="header-menu header-menu-right">
+            <ul class="nav-menu">
+              <li>
+                <a href="#">LIFE AT CAMPINA</a>
+                <ul class="sub-menu">
+                  <li><a href="life-at-campina.html">Working at Campina</a></li>
+                  <li><a href="#">Campina Job Apply</a></li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">KONTAK</a>
+                <ul class="sub-menu">
+                  <li><a href="#">Kantor Pusat</a></li>
+                  <li><a href="#">Kantor Pemasaran, Penjualan & Distribusi</a></li>
+                  <li><a href="#">Hubungan Investor</a></li>
+                  <li><a href="#">Cabang Penjualan</a></li>
+                  <li><a href="#">Join Reseller</a></li>
+                  <li class="menu-item-has-children">
+                    <a href="#">Layanan Konsumen</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">FAQ</a></li>
+                      <li><a href="#">Hotline</a></li>
+                      <li><a href="#">Pertanyaan dan Saran</a></li>
+                      <li><a href="#">Syarat & Ketentuan</a></li>
+                      <li><a href="#">Pernyataan Privasi</a></li>
+                      <li><a href="#">Komplain</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <div class="dropdown">
+                  <a class="action" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="true"> <i class="pe-7s-search"></i> </a>
 
-                    <div class="dropdown-menu dropdown-search p-0">
-                        <!-- Header Search Start -->
-                        <div class="header-search border-0">
-                          <form action="#">
-                            <input type="text" class="border-0 px-4 py-3" placeholder="Cari Produk, Artikel atau Lainnya">
-                          </form>
-                        </div>
-                        <!-- Header Search End -->
-                    </div>
-                </div>
-                </li>
-              </ul>
-            </div>
+                  <div class="dropdown-menu dropdown-search p-0">
+                      <!-- Header Search Start -->
+                      <div class="header-search border-0">
+                        <form action="#">
+                          <input type="text" class="border-0 px-4 py-3" placeholder="Cari Produk, Artikel atau Lainnya">
+                        </form>
+                      </div>
+                      <!-- Header Search End -->
+                  </div>
+              </div>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -829,7 +825,14 @@
         breakpoints: {
           640: {
             slidesPerView: 3,
-          }
+          },
+          1024: {
+            centeredSlides: false,
+            slidesPerView: 2,
+          },
+          1400: {
+            slidesPerView: 3,
+          },
         },
         navigation: {
             nextEl: '.swiper-button-next',
