--- a/corporate.html
+++ b/corporate.html
@@ -75,169 +75,165 @@
     <!-- Header Start  -->
     <div class="container">
       <div class="header header-sticky bg-white d-none d-lg-block">
-        <div class="row align-items-center">
-          <div class="col-lg-5">
-            <div class="header-menu header-menu-left">
-              <ul class="nav-menu">
-                <li class="menu-item-has-children">
-                  <a href="#">WHO WE ARE</a>
-                  <ul class="sub-menu">
-                    <li class="menu-item-has-children">
-                      <a href="#">About Us</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="about-us.html">Tentang Campina</a></li>
-                        <li><a href="about-us.html">Pesan Presiden Direktur</a></li>
-                        <li><a href="#">Visi, Misi & Nilai</a></li>
-                        <li><a href="#">Struktur Kepemimpinan</a></li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Our Journey</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">Sejarah Campina</a></li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Our Leaders</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">Struktur Organisasi</a></li>
-                        <li><a href="#">Dewan Direksi</a></li>
-                        <li><a href="#">Dewan Komisaris</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#">Our Awards & Certification</a></li>
-                  </ul>
-                </li>
-                <li class="menu-item-has-children">
-                  <a href="#">SUSTAINABILITY</a>
-                  <ul class="sub-menu">
-                    <li><a href="#">Sustainability Report</a></li>
-                    <li><a href="#">Sustainability Policy</a></li>
-                    <li><a href="#">CSR Initiatives</a></li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Kinerja Sosial</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">Ketenagakerjaan</a></li>
-                        <li><a href="#">Masyarakat</a></li>
-                        <li><a href="#">Penanganan COVID-19</a></li>
-                        <li><a href="#">Tanggung Jawab Atas Produk</a></li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Kinerja Lingkungan</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">Keanekaragaman Hayati</a></li>
-                        <li><a href="#">Campina Go Green</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li class="menu-item-has-children">
-                  <a href="#">INVESTOR</a>
-                  <ul class="sub-menu">
-                    <li><a href="#">RUPS</a></li>
-                    <li><a href="#">Paparan Publik</a></li>
-                    <li><a href="#">Laporan Tahunan</a></li>
-                    <li><a href="#">Presentasi Perusahaan</a></li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Informasi Keuangan</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">Laporan Keuangan Quartal</a></li>
-                        <li><a href="#">Laporan Keuangan Tahunan</a></li>
-                        <li><a href="#">Ikhtisar Keuangan</a></li>
-                        <li><a href="#">Prospektus</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#">Lembaga & Profesi Penunjang Pasar Modal</a></li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Informasi Saham Campina</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">Informasi Saham</a></li>
-                        <li><a href="#">Harga Saham</a></li>
-                        <li><a href="#">Kapitalisasi Pasar</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#">Kronologis Pencatatan Saham</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
+        <div class="d-flex align-items-center justify-content-center">
+          <div class="header-menu header-menu-left">
+            <ul class="nav-menu">
+              <li class="menu-item-has-children">
+                <a href="#">WHO WE ARE</a>
+                <ul class="sub-menu">
+                  <li class="menu-item-has-children">
+                    <a href="#">About Us</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="about-us.html">Tentang Campina</a></li>
+                      <li><a href="about-us.html">Pesan Presiden Direktur</a></li>
+                      <li><a href="#">Visi, Misi & Nilai</a></li>
+                      <li><a href="#">Struktur Kepemimpinan</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children">
+                    <a href="#">Our Journey</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">Sejarah Campina</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children">
+                    <a href="#">Our Leaders</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">Struktur Organisasi</a></li>
+                      <li><a href="#">Dewan Direksi</a></li>
+                      <li><a href="#">Dewan Komisaris</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Our Awards & Certification</a></li>
+                </ul>
+              </li>
+              <li class="menu-item-has-children">
+                <a href="#">SUSTAINABILITY</a>
+                <ul class="sub-menu">
+                  <li><a href="#">Sustainability Report</a></li>
+                  <li><a href="#">Sustainability Policy</a></li>
+                  <li><a href="#">CSR Initiatives</a></li>
+                  <li class="menu-item-has-children">
+                    <a href="#">Kinerja Sosial</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">Ketenagakerjaan</a></li>
+                      <li><a href="#">Masyarakat</a></li>
+                      <li><a href="#">Penanganan COVID-19</a></li>
+                      <li><a href="#">Tanggung Jawab Atas Produk</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children">
+                    <a href="#">Kinerja Lingkungan</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">Keanekaragaman Hayati</a></li>
+                      <li><a href="#">Campina Go Green</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li class="menu-item-has-children">
+                <a href="#">INVESTOR</a>
+                <ul class="sub-menu">
+                  <li><a href="#">RUPS</a></li>
+                  <li><a href="#">Paparan Publik</a></li>
+                  <li><a href="#">Laporan Tahunan</a></li>
+                  <li><a href="#">Presentasi Perusahaan</a></li>
+                  <li class="menu-item-has-children">
+                    <a href="#">Informasi Keuangan</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">Laporan Keuangan Quartal</a></li>
+                      <li><a href="#">Laporan Keuangan Tahunan</a></li>
+                      <li><a href="#">Ikhtisar Keuangan</a></li>
+                      <li><a href="#">Prospektus</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Lembaga & Profesi Penunjang Pasar Modal</a></li>
+                  <li class="menu-item-has-children">
+                    <a href="#">Informasi Saham Campina</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">Informasi Saham</a></li>
+                      <li><a href="#">Harga Saham</a></li>
+                      <li><a href="#">Kapitalisasi Pasar</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#">Kronologis Pencatatan Saham</a></li>
+                </ul>
+              </li>
+            </ul>
           </div>
-          <div class="col-lg-2 position-relative d-flex justify-content-center">
+          <div class="position-relative d-flex justify-content-center" style="width: 200px;">
             <!-- Header Logo Start -->
             <div class="header-logo">
               <a href="index.html"><img src="assets/images/campina/logo-campina.png" alt="Logo" height="126"></a>
             </div>
             <!-- Header Logo End -->
           </div>
-          <div class="col-lg-5">
-            <div class="header-menu header-menu-right">
-              <ul class="nav-menu">
-                <li>
-                  <a href="#">CORPORATE GOVERNANCE</a>
-                  <ul class="sub-menu">
-                    <li class="menu-item-has-children">
-                      <a href="#">Komite Audit</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">Piagam Komite Audit</a></li>
-                        <li><a href="#">Susunan Komite Audit Perseroan</a></li>
-                        <li><a href="#">Profil Komite Audit</a></li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Sekretaris Perusahaan</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">Profil Sekretaris Perusahaan</a></li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Audit Internal</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">SK Keputusan Piagam Audit Internal</a></li>
-                        <li><a href="#">Piagam Audit Internal</a></li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Pedoman Kerja</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">Dewan Komisaris</a></li>
-                        <li><a href="#">Dewan Direksi</a></li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Pedoman Perilaku</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">Pedoman Perilaku</a></li>
-                        <li><a href="#">SK Pedoman Perilaku</a></li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">Pernyataan Independensi</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">SK Pernyataan Independensi Komisaris</a></li>
-                        <li><a href="#">Surat Pernyataan Independensi Komite Audit</a></li>
-                      </ul>
-                    </li>
-                    <li class="menu-item-has-children">
-                      <a href="#">WBS Sistem</a>
-                      <ul class="sub-sub-menu">
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Siska Amandira</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="#">MEDIA</a>
-                  <ul class="sub-menu">
-                    <li><a href="#">Press Release</a></li>
-                    <li><a href="#">Event</a></li>
-                    <li><a href="#">Product Launching</a></li>
-                  </ul>
-                </li>
-                <li><a href="#"><i class="pe-7s-search"></i></a></li>
-              </ul>
-            </div>
+          <div class="header-menu header-menu-right">
+            <ul class="nav-menu">
+              <li>
+                <a href="#">CORPORATE GOVERNANCE</a>
+                <ul class="sub-menu">
+                  <li class="menu-item-has-children">
+                    <a href="#">Komite Audit</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">Piagam Komite Audit</a></li>
+                      <li><a href="#">Susunan Komite Audit Perseroan</a></li>
+                      <li><a href="#">Profil Komite Audit</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children">
+                    <a href="#">Sekretaris Perusahaan</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">Profil Sekretaris Perusahaan</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children">
+                    <a href="#">Audit Internal</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">SK Keputusan Piagam Audit Internal</a></li>
+                      <li><a href="#">Piagam Audit Internal</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children">
+                    <a href="#">Pedoman Kerja</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">Dewan Komisaris</a></li>
+                      <li><a href="#">Dewan Direksi</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children">
+                    <a href="#">Pedoman Perilaku</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">Pedoman Perilaku</a></li>
+                      <li><a href="#">SK Pedoman Perilaku</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children">
+                    <a href="#">Pernyataan Independensi</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">SK Pernyataan Independensi Komisaris</a></li>
+                      <li><a href="#">Surat Pernyataan Independensi Komite Audit</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children">
+                    <a href="#">WBS Sistem</a>
+                    <ul class="sub-sub-menu">
+                      <li><a href="#">FAQ</a></li>
+                      <li><a href="#">Siska Amandira</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">MEDIA</a>
+                <ul class="sub-menu">
+                  <li><a href="#">Press Release</a></li>
+                  <li><a href="#">Event</a></li>
+                  <li><a href="#">Product Launching</a></li>
+                </ul>
+              </li>
+              <li><a href="#"><i class="pe-7s-search"></i></a></li>
+            </ul>
           </div>
         </div>
       </div>
