--- a/corporate.html
+++ b/corporate.html
@@ -232,7 +232,7 @@
                   <li><a href="#">Product Launching</a></li>
                 </ul>
               </li>
-              <li><a href="#"><i class="pe-7s-search"></i></a></li>
+              <li><a href="#">FACTORY</a></li>
             </ul>
           </div>
         </div>
